# Midi-Maker

./: CMakeLists.txt  README.md  midi.cpp  midi.h
examples/: twinkle_twinkle.cpp
src/: midi.cpp  midi.h
test/: testMidi.cpp
